Se cambia una letra para probar el cambio entre ramas

--- a/pug/index.pug
+++ b/pug/index.pug
@@ -15,7 +15,7 @@ block content
                         img(src="/images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slide1__Content
                         .slide1__Content__box
-                            p.slide1__Content__box-line1 30 añosx
+                            p.slide1__Content__box-line1 30 añosxx
                             p.slide1__Content__box-line2 #[strong DE EXPERIENCIA #[br]NOS RESPALDAN] 
                             a(href="/html/empresa.html").slide1__Content__box-line3 Conózcanos    
                             
