--- a/components/head.pug
+++ b/components/head.pug
@@ -6,11 +6,11 @@ head
     link(rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
     link(href="https://fonts.googleapis.com//css2?family=Allura&family=Inter:wght@200;300;400;600&display=swap" rel="stylesheet")
-    link(rel="stylesheet" href="//css/style.css")
-    link(rel="stylesheet" href="//css/tablet.css" media="screen and (min-width: 768px)")
-    link(rel="stylesheet" href="//css/desktop.css" media="screen and (min-width: 1024px)")
-    link(rel="stylesheet", href="//css/menu.css")
-    link(rel="stylesheet", href="//css/form.css")
+    link(rel="stylesheet" href="..//css/style.css")
+    link(rel="stylesheet" href="..//css/tablet.css" media="screen and (min-width: 768px)")
+    link(rel="stylesheet" href="..//css/desktop.css" media="screen and (min-width: 1024px)")
+    link(rel="stylesheet", href="..//css/menu.css")
+    link(rel="stylesheet", href="..//css/form.css")
     link(href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist//css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous")
     script(src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous")
     script(src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js") 
