Quitando / de las rutas de las imagenes

--- a/pug/empresa.pug
+++ b/pug/empresa.pug
@@ -4,50 +4,50 @@ block content
         .section__header
             .section__header-content
                 picture
-                    source(media="(min-width:1110px)" srcset="/images/JPG/bannerSomos1920x600.jpg")
-                    source(media="(min-width:768px)" srcset="/images/JPG/bannerSomos834x537.jpg")
-                    img(src="/images/JPG/bannerSomos428x374.jpg", alt="Ingeniero con casco").img-fluid
+                    source(media="(min-width:1110px)" srcset="images/JPG/bannerSomos1920x600.jpg")
+                    source(media="(min-width:768px)" srcset="images/JPG/bannerSomos834x537.jpg")
+                    img(src="images/JPG/bannerSomos428x374.jpg", alt="Ingeniero con casco").img-fluid
                 p ¿QUIÉNES #[br] #[strong SOMOS?]
         
         p.title NUESTRA HISTORIA
         .empresa__content
             .empresa__content-historia
                 picture
-                    source(media="(min-width:1110px)" srcset="/images/fondo-degradado-desktop.png")
-                    source(media="(min-width:768px)" srcset="/images/fondo-degradado-tablet.png")
-                    img(src="/images/fondo-degradado-mobile.png").img-fluid
+                    source(media="(min-width:1110px)" srcset="images/fondo-degradado-desktop.png")
+                    source(media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png")
+                    img(src="images/fondo-degradado-mobile.png").img-fluid
                 p Somos una empresa 100% mexicana fundada en la ciudad de Aguascalientes con 30 años de experiencia en el manejo especializado de generadores de vapor. #[br]#[br]Nos hemos caracterizado por brindar a nuestros clientes un servicio personalizado y eficiente gracias a la experiencia y profesionalismo de nuestro personal así como al respaldo de nuestros proveedores al surtirnos de refacciones de las mejores marcas en el mercado; nuestros servicios cuentan con el respaldo adecuado para garantizar a nuestros clientes el resolver sus necesidades, manteniéndolos operativos de una manera eficaz y segura, siempre con el objetivo de superar sus expectativas. #[br]#[br] Nuestro compromiso en el servicio y la magnífica atención a nuestros clientes, nos sitúa como una de las empresas de mayor prestigio en el centro del país.
             .empresa__content__mvv
                 .empresa__content__mvv-box.shadow
-                    img(src="/images/SVG/mision.svg")
+                    img(src="images/SVG/mision.svg")
                     h2 MISIÓN
                     p Nuestro compromiso es satisfacer las necesidades y requerimientos de nuestros clientes con soluciones innovadoras e integrales, mediante el suministro de productos y servicios de alta calidad en ingeniería de calderas así como el ofrecer un mantenimiento industrial a precio competitivo con la finalidad de brindar soluciones específicas orientadas a maximizar la productividad dentro de sus procesos de manera óptima y eficaz.
                 .empresa__content__mvv-box.shadow
-                    img(src="/images/SVG/vision.svg")
+                    img(src="images/SVG/vision.svg")
                     h2 VISIÓN
                     p Ser una empresa de renombre global, consolidada por su alto nivel de calidad, eficiencia y servicio a través de la mejora continua y con enfoque a la excelencia, brindando siempre las mejores soluciones y productos a nuestros clientes, lo que nos permita posicionarnos como un proveedor líder de gran valor y con alta presencia en el mercado industrial.
 
                 .empresa__content__mvv-box.shadow
-                    img(src="/images/SVG/valores.svg")
+                    img(src="images/SVG/valores.svg")
                     h2 VALORES
                     ul
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Calidad
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Seguridad
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Confianza
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Honestidad
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Compromiso
                         li 
-                            img(src="/images/SVG/check.svg")
+                            img(src="images/SVG/check.svg")
                             p Responsabilidad
 
 
