--- a/pug/index.pug
+++ b/pug/index.pug
@@ -5,14 +5,14 @@ block content
             .carousel-inner
                 .carousel-item.active
                     picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/indexDesktop1-1920x1035-.jpg")
-                        source(media="(min-width:768px)" srcset="/images/slidesTablet/Slide1-834X565.jpg")
-                        img(src="/images/slidesMobile/slide2-480x565.jpg").d-block.w-100
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/indexDesktop1-1920x1035-.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide1-834X565.jpg")
+                        img(src="images/slidesMobile/slide2-480x565.jpg").d-block.w-100
                 .carousel-item
                     picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="/images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slide1__Content
                         .slide1__Content__box
                             p.slide1__Content__box-line1 30 añosxx
@@ -21,9 +21,9 @@ block content
                             
                 .carousel-item
                         picture.carousel-item__img
-                            source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                            source(media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg")
-                            img(src="/images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                            source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                            source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                            img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                         .slide2__Content
                             .slide2__Content__box
                                 p.slide2__Content__box-line1 MANTENIMIENTO PREVENTIVO #[br]Y#[br] CORRECTIVO
@@ -32,18 +32,18 @@ block content
                                 a(href="/html/servicios.html").slide2__Content__box-line4 Servicios
                 .carousel-item
                     picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="/images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slide3__Content
                         .slide3__Content__box
                             p.slide3__Content__box-line1 SUMINISTRO DE#[br]#[strong REFACCIONES #[br] ORIGINALES] 
                             a(href="/html/productos.html").slide3__Content__box-line2 Productos
                 .carousel-item
                     picture.carousel-item__img
-                        source(media="(min-width:1110px)" srcset="/images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
-                        source(media="(min-width:768px)" srcset="/images/slidesTablet/Slide2-834X565.jpg")
-                        img(src="/images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
+                        source(media="(min-width:1110px)" srcset="images/SlidesDesktop/slide2Desktop1-1920x1035.jpg")
+                        source(media="(min-width:768px)" srcset="images/slidesTablet/Slide2-834X565.jpg")
+                        img(src="images/slidesMobile/slide1-480x565.jpg").d-block.w-100.img-fluid
                     .slide4__Content
                         .slide4__Content__box
                             p.slide4__Content__box-line1 VENTA DE#[br]#[strong CALDERAS] 
@@ -58,8 +58,8 @@ block content
     .index__contactenos
         .index__contactenos__txt
             picture 
-                source(media="(min-width:768px)" srcset="/images/PNG/fondoContactenos4.png")
-                img(src="/images/PNG/fondoContactenos.png")
+                source(media="(min-width:768px)" srcset="images/PNG/fondoContactenos4.png")
+                img(src="images/PNG/fondoContactenos.png")
             p ¿Necesita asesoría especializada para su empresa?
         .index__contactenos__btn
             a(href="/html/contactenos.html") Contáctenos
@@ -69,38 +69,38 @@ block content
             .index__area__acerca__box
                 .index__area__acerca__box-txt
                     p En 
-                    img(src="/images/SVG/logoBlanco.svg")
+                    img(src="images/SVG/logoBlanco.svg")
                     p.estamos estamos comprometidos en brindar soluciones adecuadas a problemas de operación y de funcionalidad a #[strong calderas y equipos generadores de vapor] en general, asegurando su correcta operación y máximo rendimiento, a través de un servicio especializado de #[strong reparación y mantenimiento] a sus equipos; contando con un equipo humano profesional e innovador para garantizar su plena y absoluta satisfacción.
                 .index__area__acerca__box-video
                 .index__area__acerca__box-img
                     picture 
-                        source(media="(min-width:768px)" srcset="/images/calderaIndex-tablet.jpg")
-                        img(src="/images/calderaindex-mobile.jpg").img-fluid
+                        source(media="(min-width:768px)" srcset="images/calderaIndex-tablet.jpg")
+                        img(src="images/calderaindex-mobile.jpg").img-fluid
                         p SOMOS #[strong EXPERTOS] Y TENEMOS LA #[strong EXPERIENCIA] EN CALDERAS
         .index__area__experiencia
             picture 
-                source(media="(min-width:768px)" srcset="/images/experienciaFondo-tablet.jpg")  
-                img(src="/images/experienciaFondo-mobile.jpg").img-fluid
+                source(media="(min-width:768px)" srcset="images/experienciaFondo-tablet.jpg")  
+                img(src="images/experienciaFondo-mobile.jpg").img-fluid
             .index__area__experiencia-txt 
                 p La experiencia profesional de 30 años de servicio nos respaldan para ayudarle a seleccionar el #[strong equipo industrial] más adecuado a sus necesidades, así como también para brindarle la solución más idónea a sus problemas de operación en #[strong calderas], lo cual nos permite sin lugar a dudas ofrecer servicios y productos de las más alta calidad a nuestros clientes como una opción seria y confiable.
             .index__area__experiencia-img 
-                img(src="/images/experiencia.jpg", alt="Ingeniero colocando una caldera").img-fluid
+                img(src="images/experiencia.jpg", alt="Ingeniero colocando una caldera").img-fluid
         .index__area__prioridad 
             p.index__area__prioridad__title En #[strong SERVICIO TÉCNICO A CALDERAS] nuestra prioridad es usted por lo que le ofrecemos:
             .index__area__prioridad__items
                 .index__area__prioridad__items-item
                     .box-img 
-                        img(src="/images/SVG/engrane.svg")
+                        img(src="images/SVG/engrane.svg")
                     .box-txt
                         p SERVICIOS
                 .index__area__prioridad__items-item.index__area__prioridad__items-item-m
                     .box-img
-                        img(src="/images/SVG/manometro.svg")
+                        img(src="images/SVG/manometro.svg")
                     .box-txt
                         p PRODUCTOS
                 .index__area__prioridad__items-item
                     .box-img 
-                        img(src="/images/SVG/caldera.svg")
+                        img(src="images/SVG/caldera.svg")
                     .box-txt
                         p CALDERAS
         .carousel__marcas 
@@ -108,23 +108,23 @@ block content
         p.title ¿POR QUÉ ELEGIRNOS?
         .index__area__elegirnos
             picture 
-                source(media="(min-width:768px)" srcset="/images/fondo-degradado-tablet.png")
-                img(src="/images/fondo-degradado-mobile.png").img-fluid
+                source(media="(min-width:768px)" srcset="images/fondo-degradado-tablet.png")
+                img(src="images/fondo-degradado-mobile.png").img-fluid
             .index__area__elegirnos__items
                 .index__area__elegirnos__items-item
-                    img(src="/images/SVG/circle-chevron-right-solid__white.svg")
+                    img(src="images/SVG/circle-chevron-right-solid__white.svg")
                     p Nuestro compromiso es servirles como ustedes se merecen, proveyendo de todo lo indispensable para sus calderas, mejorando el desempeño y la confiabilidad de las mismas en un tiempo mínimo de respuesta, con la máxima rapidez y la mayor eficiencia.
                 .index__area__elegirnos__items-item
-                    img(src="/images/SVG/circle-chevron-right-solid__white.svg")
+                    img(src="images/SVG/circle-chevron-right-solid__white.svg")
                     p Brindamos un servicio especializado, personalizado y 100% garantizado para mantener sus equipos en óptimas condiciones de acuerdo a las necesidades y objetivos de cada empresa.
                 .index__area__elegirnos__items-item
-                    img(src="/images/SVG/circle-chevron-right-solid__white.svg")
+                    img(src="images/SVG/circle-chevron-right-solid__white.svg")
                     p Gracias al respaldo de los proveedores de las marcas más reconocidas, contamos con un amplio stock de partes de reemplazo, refacciones y equipos complementarios para sus calderas y así ofrecerles un excelente servicio.
                 .index__area__elegirnos__items-item
-                    img(src="/images/SVG/circle-chevron-right-solid__white.svg")
+                    img(src="images/SVG/circle-chevron-right-solid__white.svg")
                     p Ofrecemos el mejor servicio de carburación en base al cumplimiento de las normas oficiales.
                 .index__area__elegirnos__items-item
-                    img(src="/images/SVG/circle-chevron-right-solid__white.svg")
+                    img(src="images/SVG/circle-chevron-right-solid__white.svg")
                     p Nuestro personal está altamente calificado, cuenta con la experiencia y el profesionalismo para resolver sus necesidades y superar sus expectativas.
 
 
