--- a/pug/marcas.pug
+++ b/pug/marcas.pug
@@ -2,29 +2,29 @@ p.title MARCAS
 .carousel.slide.carousel__mobile(data-bs-ride="carousel")#carouselExampleControls
     .carousel-inner
         .carousel-item.active
-            img(src="/images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/ASCO.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/ASCO.png").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/METRON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/METRON.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/PICSA.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/PICSA.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
@@ -35,21 +35,21 @@ p.title MARCAS
 .carousel.slide.carousel__tablet(data-bs-ride="carousel")#carouselExampleControls
     .carousel-inner
         .carousel-item.active
-            img(src="/images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
-            img(src="/images/Marcas/ASCO.png").d-block.w-100.img-fluid
-            img(src="/images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ALLANSON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/ASCO.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/BELL & GOSSET.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
-            img(src="/images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
-            img(src="/images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/CLEAVERBROOKS.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/ECOFLAM.png").d-block.w-100.img-fluid
+            img(src="images/Marcas/GRUNDFOS.jpg").d-block.w-100.img-fluid
         .carousel-item
-            img(src="/images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
-            img(src="/images/Marcas/METRON.jpg").d-block.w-100.img-fluid
-            img(src="/images/Marcas/PICSA.jpg").d-block.w-100.img-fluid     
+            img(src="images/Marcas/HONEYWELL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/METRON.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/PICSA.jpg").d-block.w-100.img-fluid     
         .carousel-item
-            img(src="/images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
-            img(src="/images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
-            img(src="/images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/SENTINEL.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VAYREMEX.jpg").d-block.w-100.img-fluid
+            img(src="images/Marcas/VIKING PUMP.jpg").d-block.w-100.img-fluid
         button(type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev").carousel-control-prev
             span(aria-hidden="true").carousel-control-prev-icon
             span.visually-hidden Previous
